--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+shaderbg (1.2.0) stable; urgency=low
+
+  * Add keyboard support
+
+ -- Harlen Batagelo <hbatagelo@gmail.com>  Thu, 27 Fev 2026 21:10:00 -0300
+
 shaderbg (1.1.0) stable; urgency=low
 
   * Replace ShaderToy API fetching with JSON file import
